k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-shop
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: shop.com
    http:
      paths:
      - path: /api/products
        backend:
          serviceName: products-service
          servicePort: 3000
      - path: /api/cart
        backend:
          serviceName: cart-service
          servicePort: 3001



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - shop.com
    # secretName: e-ticket-secret
  rules:
  - host: shop.com
    http:
      paths:
      - path: /api/products
        pathType: Prefix
        backend:
          service:
            name: products-service
            port:
              number: 3000
      - path: /api/cart
        pathType: Prefix
        backend:
          service:
            name: cart-service
            port:
              number: 3001
